--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = "gridwars.starter.EmulatorRunner"
+sourceCompatibility = JavaVersion.VERSION_11
+
 
 jar {
     from sourceSets.main.java
