--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ jar {
     manifest {
         attributes(
             // TODO specify the fully qualified class name of your bot here
-            'Bot-Class-Name': 'gridwars.starter.GluttonBotPRO5',
+            'Bot-Class-Name': 'gridwars.starter.GluttonBotPRO5_T_tuned',
         )
     }
 }
